# liquid-chain-sdk

./: .gitmodules  Dockerfile  Makefile  README.md  build-c.sh  build-c2ffi-mac.sh  build-rust.sh  build.sh  compile.sh  fetch-wasi.sh  start.sh
checker/: build.sh  checker  checker.go
liquid-cdt/: build.sh  go.mod  go.sum  liquid-cdt.go
liquid-cdt/lib/: liquid.h
liquid-cdt/lib/liquid/: Cargo.toml
liquid-cdt/lib/liquid/src/: lib.rs
liquid-cdt/tools/: abi_test.go  c2ffi.go  checker.go  checker_test.go  init_test.go
liquid-cdt/tools/tests/: add.cpp  contract.c  contract.wasm  liquid_contract.wasm
liquid-cdt/tools/tests/add/: Cargo.toml  add-abi.json  add.wasm
liquid-cdt/tools/tests/add/src/: lib.rs
liquid-cdt/utils/: file.go
vertex-cdt/: build.sh  go.mod  vertex-cdt.go
vertex-cdt/env/: functions.json
vertex-cdt/lib/: vertex.cpp.h  vertex.h
vertex-cdt/lib/vertex/: Cargo.toml
vertex-cdt/lib/vertex/src/: lib.rs
vertex-cdt/tools/: abi.go  abi_test.go  abigen.go  abigen_test.go  c2ffi.go  checker.go  checker_test.go  compile.go  compile_test.go  init.go  type.go  type_test.go
vertex-cdt/tools/tests/: add.cpp  contract-abi.json  contract.c
vertex-cdt/tools/tests/add/: Cargo.toml  add-abi.json  add.wasm
vertex-cdt/tools/tests/add/src/: lib.rs
vertex-cdt/utils/: file.go
