[package]
name = "vertex-lib"
version = "0.1.2"
authors = ["dangquan-quoine <quan.nguyen.dang@quoine.com>"]
edition = "2018"
description = "vertex library for smart contract"
license = "MIT"
homepage = "https://liquid.com"
documentation = "https://github.com/QuoineFinancial/vertex-sdk/vertex-cdt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
