[package]
name = "vertex-lib"
version = "0.1.4"
authors = ["dangquan-quoine <quan.nguyen.dang@quoine.com>"]
edition = "2018"
description = "vertex library for smart contract"
license = "MIT"
homepage = "https://liquid.com"
documentation = "https://github.com/QuoineFinancial/vertex-sdk/vertex-cdt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
byteorder = "1.3.2"