[package]
name = "add"
version = "0.1.0"
authors = ["dangquan-quoine <quan.nguyen.dang@quoine.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vertex-lib = "0.1.3"
[lib]
 crate-type = ["cdylib"]
[profile.release]
 lto = true
